# server

./: CMakeLists.txt  README.md
src/: generator.cpp  main.cpp  network.cpp
src/include/: generator.h  network.h
